Opened 15 years ago
Closed 12 years ago
#5015 closed bug (fixed)
BPopUpMenu / BMenuField graphic glitch
Reported by: | jackburton | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When a BPopUpMenu is added to a BMenuField, and the menufield is wider than the menu, the visual effect is really bad. The menu should be resized to be as wide as the menufield.
Attachments (1)
Change History (4)
by , 15 years ago
comment:1 by , 15 years ago
Owner: | changed from | to
---|
comment:2 by , 13 years ago
Version: | R1/alpha1 → R1/Development |
---|
Note:
See TracTickets
for help on using tickets.
Still here in hrev43061.