In case the BMenu is inside a BMenuField, override the items width to span over the BMenuField's width. Note that if the BMenu is already wider, we don't shrink it, at least for now. Fixes #5015.